--- a/packages/app/src/blog/test-mdx.mdx
+++ b/packages/app/src/blog/test-mdx.mdx
@@ -2,6 +2,6 @@
 
 Welcome to the _jungle_.
 
-<div style={{ color: 'green' }}>
-  This text is green.
+<div className="text-green-400">
+ This text is green.
 </div>
